Fix image aligntment

--- a/website/src/styles/inlineImage.css
+++ b/website/src/styles/inlineImage.css
@@ -4,4 +4,5 @@
   vertical-align: middle;
   max-width: none;
   height: auto;
+  margin: 0;
 }
